--- a/httpd.conf
+++ b/httpd.conf
@@ -1,5 +1,8 @@
 # busybox httpd config
 
+# custom 404 pages only allowed in /etc/httpd.conf
+#E404:404.html
+
 # implicit index urls
 I:index.htm
 
