--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,6 @@
 *.htm linguist-generated
 
 # source code
-*.md linguist-detectable
+.src/* linguist-detectable
 .kagami/* linguist-detectable
 404.html linguist-detectable
