XHTML validation toggle

--- a/httpd.conf
+++ b/httpd.conf
@@ -3,9 +3,13 @@
 # custom 404 pages only allowed in /etc/httpd.conf
 #E404:404.html
 
+# uncomment to validate as XHTML5
+#.htm:application/xml
+
 # implicit index urls
 I:index.htm
 
 # mime types
 .svg:image/svg+xml
 .webm:video/webm
+
