--- a/httpd.conf
+++ b/httpd.conf
@@ -3,8 +3,9 @@
 # custom 404 pages only allowed in /etc/httpd.conf
 #E404:404.html
 
-# uncomment to validate as XHTML5
-#.htm:application/xml
+# uncomment to serve as XHTML5
+# offers stricter in-browser syntax validation
+#.htm:application/xhtml+xml
 
 # implicit index urls
 I:index.htm
