changed wording in projects section

--- a/httpd.conf
+++ b/httpd.conf
@@ -3,8 +3,8 @@
 # custom 404 pages only allowed in /etc/httpd.conf
 #E404:404.html
 
-# uncomment to serve as XHTML5
-# offers stricter in-browser syntax validation
+# uncomment to serve as XHTML
+# enforces stricter in-browser syntax validation
 #.htm:application/xhtml+xml
 
 # implicit index urls
