--- a/httpd.conf
+++ b/httpd.conf
@@ -3,14 +3,12 @@
 # custom 404 pages only allowed in /etc/httpd.conf
 #E404:404.html
 
-# uncomment to serve as XHTML
-# enforces stricter in-browser syntax validation
-#.htm:application/xhtml+xml
-
 # implicit index urls
 I:index.htm
 
-# mime types
+# MIME types
+# serve pages as XHTML for strict validation
+.htm:application/xhtml+xml
 .svg:image/svg+xml
 .webm:video/webm
 
