--- a/httpd.conf
+++ b/httpd.conf
@@ -9,6 +9,7 @@ I:index.htm
 # MIME types
 # serve pages as XHTML for strict validation
 .htm:application/xhtml+xml
+.html:application/xhtml+xml
 .svg:image/svg+xml
 .webm:video/webm
 
