[microsounds@shami] 1 change 2022/10/29 7:42pm PDT

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
-# automatically generated
-*.htm linguist-generated
-
 # source code
 .src/** linguist-detectable
 .kagami/** linguist-detectable
-misc/**
+misc/** linguist-detectable
 404.html linguist-detectable
+
+# automatically generated
+*.htm linguist-generated
